@startuml

title __NETWORK's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.network {
      class it.polimi.ingsw.network.Client {
          {static} - clientManager : ClientManager
          {static} - ip : String
          {static} - port : int
          {static} - queue : LinkedList<ServerMessage>
          {static} - socket : Socket
          {static} - socketIn : ObjectInputStream
          {static} - socketOut : ObjectOutputStream
          + Client()
          + getMessageFromQueue()
          + run()
          {static} + sendRequest()
          {static} + startConnection()
          {static} - getKeepAlive()
          {static} - ping()
          - receiveMessage()
          {static} - sendMessage()
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      class it.polimi.ingsw.network.Connection {
          - active : boolean
          - inLock : Object
          - name : String
          - outLock : Object
          - socket : Socket
          - socketIn : ObjectInputStream
          - socketOut : ObjectOutputStream
          + Connection()
          + closeConnection()
          + getName()
          + run()
          + sendMessage()
          + setName()
          - close()
          - isActive()
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      class it.polimi.ingsw.network.Server {
          {static} + LOGGER : Logger
          ~ lobbySizeAsked : boolean
          ~ tempLobbySize : int
          {static} - PORT : int
          - clientsConnected : Map<String, Connection>
          {static} - connections : List<Connection>
          - executor : ExecutorService
          {static} - rooms : Map<MasterController, Map<String, Connection>>
          - serverSocket : ServerSocket
          + Server()
          + askLobbySize()
          + cleanLobby()
          + clientConnectionException()
          + handleMessage()
          + initLobby()
          + login()
          + registerClient()
          + run()
          - checkLogin()
          - deregisterConnection()
          - newConnection()
          - registerConnection()
          - removeConnectionInRooms()
          {static} - searchConnectionInRooms()
          - setLobbySize()
          - setUpLobbySize()
      }
    }
  }
  

  it.polimi.ingsw.network.Connection .up.|> java.lang.Runnable
  it.polimi.ingsw.network.Connection -up-|> it.polimi.ingsw.server.view.Observable
  it.polimi.ingsw.network.Connection o-- it.polimi.ingsw.network.Server : server


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
